resourses/tmp/istio-virtual-services/kibana-log-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: log
spec:
  hosts:
  - "kibana-log.evertonarakaki.tk"
  gateways:
  - public-gateway.istio-system.svc.cluster.local
  http:
  - route:
    - destination:
        host: kibana-logging
