resourses/tmp/istio-virtual-services/template-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: <NOMEDOSEUVIRTUALSERVICE>
  namespace: <NAMESPACEDOSEUVIRTUALSERVICE>
spec:
  hosts:
#  - "backend-spring.arakaki.in"
   - "<SUBDOMINIO.DOMINIO>"
  gateways:
  - public-gateway.istio-system.svc.cluster.local
  http:
  - route:
    - destination:
        host: <NOMEDOSEUSERVICE>
